--- a/rulebooks/manage_selinux_alerts_snow.yml
+++ b/rulebooks/manage_selinux_alerts_snow.yml
@@ -16,7 +16,7 @@
   rules:
     # 0) Debug helper: print the whole event for testing
     - name: Show raw event
-      condition: "event.environment is not defined"
+      condition: "'environment' not in event"
       action:
         debug:
           msg: "No environment in this event"
