--- a/playbooks/gather_machine_info_by_cmdb_ci.yml
+++ b/playbooks/gather_machine_info_by_cmdb_ci.yml
@@ -38,5 +38,5 @@
         data:
           environment: "{{ ci_environment }}"
           target_host: "{{ ci_target_host }}"
-          eda_event: "{{ ansible_eda.event | default({}) }}"
+          sys_id: "{{ ansible_eda.event.sys_id | default('') }}"
         aggregate: false
