--- a/rulebooks/manage_selinux_alerts_snow.yml
+++ b/rulebooks/manage_selinux_alerts_snow.yml
@@ -44,20 +44,16 @@
             extra_vars:
               target_host: "{{ event.target_host }}"
               environment: "{{ event.environment }}"
-              sys_id: "{{ event.sys_id }}"
+              incident_sys_id: "{{ event.sys_id }}"
               success_update: |
                 ########### EDA REMEDIATION STATUS UPDATE - SUCCESS #############
               fail_update: |
                 ########### EDA REMEDIATION STATUS UPDATE - FAIL #############
               work_notes: |
-                ########### EDA REMEDIATION STATUS UPDATE - Attempting remediation #############
+                ########### EDA REMEDIATION STATUS UPDATE - Attempting remediation in {{ event.environment }} environment #############
 
     # 3) Handle production incidents
     - name: Handle production incident
-      throttle:
-        once_within: 5 minutes
-        group_by_attributes:
-          - payload.incident.correlation_id
       condition: event.environment is defined and event.environment == "Production"
       action:
         run_workflow_template:
@@ -68,7 +64,7 @@
               extra_vars:
                 target_host: "{{ event.target_host }}"
                 environment: "{{ event.environment }}"
-                sys_id: "{{ event.sys_id }}"
+                incident_sys_id: "{{ event.sys_id }}"
                 success_update: |
                 ########### EDA REMEDIATION STATUS UPDATE - SUCCESS #############
                 fail_update: |
