--- a/playbooks/create_emergency_change.yml
+++ b/playbooks/create_emergency_change.yml
@@ -7,21 +7,21 @@
     # ServiceNow connection is taken from environment variables set by env_script.sh
     # Required env vars: SN_HOST, SN_USERNAME, SN_PASSWORD
 
-    change_short_description: "Emergency change - TEST15"
-    change_description: "Detected critical hardware failure on primary DB server; immediate replacement required."
-    change_impact: high
-    change_urgency: high
-    change_assignment_group: "Event Driven Ansible"
-    change_assigned_to: ""
-    change_start: ""
-    change_end: ""
+    # change_short_description: "Emergency change - TEST15"
+    # change_description: "Detected critical hardware failure on primary DB server; immediate replacement required."
+    # change_impact: high
+    # change_urgency: high
+    # change_assignment_group: "Event Driven Ansible"
+    # change_assigned_to: ""
+    # change_start: ""
+    # change_end: ""
 
-    # Incident fields
-    incident_short_description: "Prod alert - pre-change incident"
-    incident_description: "Opening incident associated with the automated emergency change."
-    incident_impact: high
-    incident_urgency: high
-    incident_assignment_group: "{{ change_assignment_group }}"
+    # # Incident fields
+    # incident_short_description: "Prod alert - pre-change incident"
+    # incident_description: "Opening incident associated with the automated emergency change."
+    # incident_impact: high
+    # incident_urgency: high
+    # incident_assignment_group: "{{ change_assignment_group }}"
 
     # Alertmanager fingerprint to correlate incident and change
     alert_fingerprint: ""
@@ -29,10 +29,6 @@
   tasks:
     - name: Create incident for the emergency change
       servicenow.itsm.incident:
-        instance:
-          host: "{{ lookup('env', 'SN_HOST') }}"
-          username: "{{ lookup('env', 'SN_USERNAME') }}"
-          password: "{{ lookup('env', 'SN_PASSWORD') }}"
         state: new
         short_description: "{{ incident_short_description }}"
         description: "{{ incident_description }}"
