--- a/playbooks/launch_and_wait_job_template.yml
+++ b/playbooks/launch_and_wait_job_template.yml
@@ -3,23 +3,23 @@
   hosts: localhost
   gather_facts: false
   # Expects `implementation_payload` to be provided at runtime, e.g.
-  # implementation_payload:
-  #   job_template: "Implementation JT"
-  #   organization: "Default"
-  #   extra_vars:
-  #     target_host: "..."
-  #     incident_sys_id: "..."
+  implementation_payload:
+    job_template: "Implementation JT"
+    organization: "Default"
+    extra_vars:
+      target_host: "..."
+      incident_sys_id: "..."
 
   tasks:
     - name: Launch job template
-      awx.awx.job_launch:
+      ansible.controller.job_launch:
         job_template: "{{ implementation_payload.job_template }}"
         organization: "{{ implementation_payload.organization | default(omit) }}"
         extra_vars: "{{ implementation_payload.extra_vars | default({}) }}"
       register: launch
 
     - name: Wait for job to finish
-      awx.awx.job_wait:
+      ansible.controller.job_wait:
         job_id: "{{ launch.id }}"
         timeout: 1800               # 30 minutes; adjust as needed
         interval: 2
