--- a/playbooks/launch_and_wait_job_template.yml
+++ b/playbooks/launch_and_wait_job_template.yml
@@ -3,12 +3,12 @@
   hosts: localhost
   gather_facts: false
   # Expects `implementation_payload` to be provided at runtime, e.g.
-  implementation_payload:
-    job_template: "Implementation JT"
-    organization: "Default"
-    extra_vars:
-      target_host: "..."
-      incident_sys_id: "..."
+  # implementation_payload:
+  #   job_template: "Implementation JT"
+  #   organization: "Default"
+  #   extra_vars:
+  #     target_host: "..."
+  #     incident_sys_id: "..."
 
   tasks:
     - name: Launch job template
