--- a/playbooks/launch_and_wait_job_template.yml
+++ b/playbooks/launch_and_wait_job_template.yml
@@ -3,21 +3,40 @@
   hosts: localhost
   gather_facts: false
   tasks:
-    - name: Launch job template
-      ansible.controller.job_launch:
-        job_template: "{{ implementation_payload.job_template }}"
-        organization: "{{ implementation_payload.organization | default(omit) }}"
-        extra_vars: "{{ implementation_payload.extra_vars | default({}) }}"
-      register: launch
+    tasks:
+      - name: Preflight — ensure payload arrived from workflow artifacts
+        assert:
+          that:
+            - implementation_plan_json is defined
+            - implementation_plan_json.job_template is defined
+          fail_msg: "implementation_plan_json was not provided by the workflow node"
 
-    - name: Wait for job to finish
-      ansible.controller.job_wait:
-        job_id: "{{ launch.id }}"
-        timeout: 1800               # 30 minutes; adjust as needed
-        interval: 2
-      register: job_result
+      - name: (Optional) inspect the incoming payload
+        debug:
+          var: implementation_plan_json
+        verbosity: 1
 
-    - name: Fail play if the Controller job did not succeed
-      when: job_result.status != 'successful'
-      fail:
-        msg: "Job {{ launch.id }} finished with status {{ job_result.status }}"
+      - name: Launch job template
+        ansible.controller.job_launch:
+          # (These can be omitted if provided via env in AAP)
+          # controller_host: "{{ lookup('env','CONTROLLER_HOST') | regex_replace('/api/.*$', '') }}"
+          # controller_username: "{{ lookup('env','CONTROLLER_USERNAME') | default(omit) }}"
+          # controller_password: "{{ lookup('env','CONTROLLER_PASSWORD') | default(omit) }}"
+          # validate_certs: false
+          job_template: "{{ implementation_plan_json.job_template }}"
+          organization: "{{ implementation_plan_json.organization | default(omit) }}"
+          extra_vars: "{{ implementation_plan_json.extra_vars | default({}) }}"
+        register: launch
+
+      - name: Wait for job to finish
+        ansible.controller.job_wait:
+          # controller_host/controller_* also read from env if set in AAP
+          job_id: "{{ launch.id }}"
+          timeout: 1800
+          interval: 2
+        register: job_result
+
+      - name: Fail play if the Controller job did not succeed
+        fail:
+          msg: "Job {{ launch.id }} finished with status {{ job_result.status }}"
+        when: job_result.status != 'successful'
